[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/vectors/gear.svg" type="Texture" id=1]
[ext_resource path="res://scripts/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/vectors/music.svg" type="Texture" id=3]
[ext_resource path="res://assets/vectors/sparkles.svg" type="Texture" id=4]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=5]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 620.0
margin_bottom = -500.0
mouse_filter = 1
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Button" type="TextureButton" parent="."]
modulate = Color( 1, 1, 0.882353, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 70.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="Panel" type="Control" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -399.0
margin_right = -75.0
margin_bottom = 100.0

[node name="Rows" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Music" type="HBoxContainer" parent="Panel/Rows"]
margin_right = 310.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Panel/Rows/Music"]
modulate = Color( 1, 1, 0.882353, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="MusicVolume" type="HSlider" parent="Panel/Rows/Music"]
margin_left = 50.0
margin_right = 255.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
scrollable = false

[node name="MusicPercent" type="Label" parent="Panel/Rows/Music"]
margin_left = 265.0
margin_right = 310.0
margin_bottom = 40.0
rect_min_size = Vector2( 45, 40 )
text = "100%"
align = 1
valign = 1

[node name="FX" type="HBoxContainer" parent="Panel/Rows"]
margin_top = 44.0
margin_right = 310.0
margin_bottom = 84.0

[node name="TextureRect" type="TextureRect" parent="Panel/Rows/FX"]
modulate = Color( 1, 1, 0.882353, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="FXVolume" type="HSlider" parent="Panel/Rows/FX"]
margin_left = 50.0
margin_right = 255.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
scrollable = false

[node name="FXPercent" type="Label" parent="Panel/Rows/FX"]
margin_left = 265.0
margin_right = 310.0
margin_bottom = 40.0
rect_min_size = Vector2( 45, 40 )
text = "100%"
align = 1
valign = 1

[connection signal="button_down" from="Button" to="." method="_on_btn_down"]
[connection signal="button_up" from="Button" to="." method="_on_btn_up"]
[connection signal="focus_entered" from="Button" to="." method="_on_btn_mouse_enter"]
[connection signal="focus_exited" from="Button" to="." method="_on_btn_mouse_exit"]
[connection signal="mouse_entered" from="Button" to="." method="_on_btn_mouse_enter"]
[connection signal="mouse_exited" from="Button" to="." method="_on_btn_mouse_exit"]
[connection signal="drag_ended" from="Panel/Rows/Music/MusicVolume" to="." method="_on_drag_end"]
[connection signal="value_changed" from="Panel/Rows/Music/MusicVolume" to="." method="_on_music_volume_change"]
[connection signal="drag_ended" from="Panel/Rows/FX/FXVolume" to="." method="_on_drag_end"]
[connection signal="value_changed" from="Panel/Rows/FX/FXVolume" to="." method="_on_fx_volume_change"]
